--- a/src/views/partials/content/hero.ejs
+++ b/src/views/partials/content/hero.ejs
@@ -1,10 +1,10 @@
 <section class="hero container">
     <div class="hero-text">
       <h1>Hello, I'm Anahí Estrella</h1>
-      <h2>Full-Stack Developer</h2>
-      <a href="#projects" class="btn">View Projects</a>
+      <h2>Backend Developer</h2>
+      <a class="btn-cv" onclick="downloadCV()">Download CV</a>
     </div>
     <div class="hero-image">
-      <img src="/img/perfil.jpeg" alt="Anahi Smith Photo" />
+      <img src="/img/perfil.jpeg" alt="Anahi Photo" />
     </div>
   </section>
