--- a/src/views/partials/content/projects.ejs
+++ b/src/views/partials/content/projects.ejs
@@ -1,20 +1,37 @@
 <section class="projects container" id="projects">
-    <h2>Projects</h2>
-    <div class="project-list">
-      <div class="project-card">
-        <h3>Project One</h3>
-        <p>A description of the project goes here.</p>
-        <a href="#" class="btn">View Project</a>
-      </div>
-      <div class="project-card">
-        <h3>Project Two</h3>
-        <p>A description of the project goes here.</p>
-        <a href="#" class="btn">View Project</a>
-      </div>
-      <div class="project-card">
-        <h3>Project Three</h3>
-        <p>A description of the project goes here.</p>
-        <a href="#" class="btn">View Project</a>
-      </div>
+  <h2>Projects</h2>
+  <div class="project-list">
+    <div class="project-card">
+      <h3>yuhudils</h3>
+      <p>I contributed to the development of endpoints for the application process in a web application for login management and user modules. I also participated in information management to prevent data inconsistencies between systems.</p>
+      <a href="https://yuhu.mx/yuhudils/" class="btn">View Project</a>
     </div>
-  </section>
+    <div class="project-card">
+      <h3>e-sigen</h3>
+      <p>I contributed to the development and deployment of a reengineered notary system with modules for managing users, permissions, clients, billing, and blacklist verification, among others.</p>
+      <a href="https://e-sigen.com" class="btn">View Project</a>
+    </div>
+    <div class="project-card">
+      <h3>cib-financial</h3>
+      <p>I participated in the creation of a landing page for a SaaS company focused on attracting new customers, integrating blog and user catalogs to provide information. I collaborated on the deployment and creation of the API.</p>
+      <a href="https://cib-financiera.com" class="btn">View Project</a>
+    </div>
+    <div class="project-card">
+      <h3>CEFEMEX</h3>
+      <p>I collaborated on the development and deployment of a web application for online pawn management, integrating the DHL API to coordinate package pickups and shipping.</p>
+      <a href="https://empenosenlinea.cefemex.com.mx" class="btn">View Project</a>
+    </div>
+    <div class="project-card">
+      <h3>Quotare</h3>
+      <p>I participated in the development and deployment of a SaaS web application focused on real estate estimators, structured into three key services.</p>
+    </div>
+    <div class="project-card">
+      <h3>SIGA – vet</h3>
+      <p>I developed the start-up of a desktop application for a veterinary clinic's Integrated Administrative Management System (SIGA), managing animals, owners, consultations, appointments, etc.</p>
+    </div>
+    <div class="project-card">
+      <h3>Point of sale system</h3>
+      <p>I integrated mobile phone service into a point-of-sale system, integrating top-up functionality through the use of TAECEL services.</p>
+    </div>
+  </div>
+</section>
