--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,11 +1,17 @@
-<nav class="bg-[#0A192F] text-white sticky top-0 z-50 shadow-md">
-  <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center navbar-content">
-    <h1>Anahí Estrella</h1>
-    <ul class="flex space-x-4">
-      <li><a href="#about" class="hover:text-[#64FFDA]">About me</a></li>
-      <li><a href="#projects" class="hover:text-[#64FFDA]">Projects</a></li>
-      <li><a href="#tecnologies" class="hover:text-[#64FFDA]">Tecnologies</a></li>
+<nav class="navbar">
+  <div class="navbar-container">
+    <div class="navbar-logo">
+      <img src="/img/logo.png" alt="Logo" class="logo" />
+      <h1 class="navbar-title">StackStar</h1>
+    </div>
+    <button class="menu-toggle" id="menu-toggle" aria-label="Open Menu">
+      ☰
+    </button>
+    <ul class="navbar-links" id="navbar-links">
+      <li><a href="#about">About me</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#tecnologies">Technologies</a></li>
+      <li><a href="#contact" class="button-link">Contact</a></li>
     </ul>
-    <button>Contact</button>
   </div>
 </nav>
