views.partials.content.about: Changed img from naturaleza to reparaciones

--- a/src/views/partials/content/about.ejs
+++ b/src/views/partials/content/about.ejs
@@ -22,6 +22,6 @@
     <img src="/img/cursos.jpeg" alt="cursos" class="image"/>
     <img src="/img/logros.jpeg" alt="logros" class="image"/>
     <img src="/img/electronica.jpeg" alt="electronica" class="image"/>
-    <img src="/img/naturaleza.jpeg" alt="naturaleza" class="image"/>
+    <img src="/img/reparaciones.jpeg" alt="naturaleza" class="image"/>
   </div>
 </section>
